<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/layoutbg"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="5dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        app:cardElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:contentPadding="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textSize="14sp"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/textProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/text"
                android:text="@string/product_name"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

            <TextView
                android:id="@+id/text0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text"
                android:text="@string/Content"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textSize="14sp"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/textProductDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textProductName"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/text0"
                android:maxLines="1"
                android:text="@string/product_detail"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text0"
                android:text="@string/quantity"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textSize="14sp"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/textQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textProductDescription"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/text1"
                android:maxLines="1"
                android:text="@string/product_quantity"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />


            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text1"
                android:text="@string/total_price"
                android:textAppearance="@android:style/TextAppearance.Material.Headline"
                android:textSize="14sp"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/textTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textQuantity"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/text2"
                android:text="@string/price"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />


            <ImageView
                android:onClick="removeProductFromCart"
                android:id="@+id/removeProductFromCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_cancel_black" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>