<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal">

    <TextView
        android:fontFamily="sans-serif-medium"
        android:layout_width="wrap_content"
        android:padding="10dp"
        android:id="@+id/textForgetPass"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/forgetpassword"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="5dp">

    <EditText
        android:inputType="number"
        android:maxLength="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextOldPass"
        android:hint="@string/enter_your_mobile_number"
        />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:padding="5dp">

        <EditText
            android:inputType="textPassword"
            android:hint="@string/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextNewPass"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:fontFamily="sans-serif-medium"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btnForgetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btnbg"
        android:text="Submit"
        android:textColor="@color/white"/>
</LinearLayout>